# c-bootcamp-zaraktariq

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
WarmUp_1/: token.h
main/: CMakeLists.txt  Makefile  cmake_install.cmake  int_stack.c  main.c  token.c  token.h
main/r_forth/: CMakeLists.txt  general_stack.c  int_stack.h  token.h  wordlist-demo.c
main/rfourth/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  general_stack.c  general_stack.h  int_stack.h  resolveActions.c  token.c  token.h
main/std_queue/: int_stack.c  int_stack.h  int_stack_demo.c  int_stack_tests.cc  wordlist-demo.c
r_forth/: CMakeLists.txt  README.md  execute  general_stack.h  int_stack.h  main.c  resolveActions.c  resolveActions.h  token.c
src/: CMake.Lists.txt
src/main/: CMakeLists.txt  main.c  token.c  token.h
std_queue/: CMakeLists.txt  int_stack.c  int_stack_tests.cc  wordlist.c  wordlist.h
tokens/: CMakeLists.txt  token.c
